force-app/main/default/objects/SampleRequestProduct__c/SampleRequestProduct__c.object-meta.xml
<CustomObject>
    <label>Sample Product</label>
    <nameField>
        <displayFormat>SRPN-{000000}</displayFormat>
        <label>Sample Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>