force-app/main/default/objects/SampleRequestProduct__c/fields/CFNA_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>CFNA_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cargill Beef</fullName>
            </value>
            <value>
                <fullName>Case Ready</fullName>
            </value>
            <value>
                <fullName>Cocoa &amp; Chocolate</fullName>
            </value>
            <value>
                <fullName>CVAP-Beef (Burgers)</fullName>
            </value>
            <value>
                <fullName>CVAP-Poultry (Eggs)</fullName>
            </value>
            <value>
                <fullName>Foodservice Oils</fullName>
            </value>
            <value>
                <fullName>Salt</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Truvia</fullName>
            </value>
            <value>
                <fullName>Turkey &amp; Cooked Meats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>