force-app/main/default/objects/SampleRequestProduct__c/fields/CFNA_Other_Type__c.field-meta.xml
<CustomField>
    <fullName>CFNA_Other_Type__c</fullName>
    <label>Other Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>