force-app/main/default/objects/SampleRequestProduct__c/fields/CFNA_Product_Desc__c.field-meta.xml
<CustomField>
    <fullName>CFNA_Product_Desc__c</fullName>
    <label>Product Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>