force-app/main/default/objects/SampleRequestProduct__c/fields/CFNA_Type__c.field-meta.xml
<CustomField>
    <fullName>CFNA_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CFNA_Business_Unit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 LB Bag</fullName>
                <default>true</default>
                <label>1 LB Bag</label>
            </value>
            <value>
                <fullName>25 LB Bag</fullName>
            </value>
            <value>
                <fullName>2LB Bag</fullName>
            </value>
            <value>
                <fullName>50LB Bag</fullName>
            </value>
            <value>
                <fullName>5 LBS</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Chub</fullName>
            </value>
            <value>
                <fullName>JIB</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>8 OZ JAR</fullName>
            </value>
            <value>
                <fullName>1 Tray</fullName>
            </value>
            <value>
                <fullName>Crumbles</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>