force-app/main/default/objects/SampleRequestProduct__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <label>Distributor Product Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>