force-app/main/default/objects/SampleRequestProduct__c/fields/Fulfillment_Plant__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Plant__c</fullName>
    <formula>Sample_Request_Fulfillment__r.Plant_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Plant</label>
    <type>Text</type>
</CustomField>