force-app/main/default/objects/SampleRequestProduct__c/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Sample out of stock</fullName>
            </value>
            <value>
                <fullName>Sample above business thresholds</fullName>
            </value>
            <value>
                <fullName>Sample Product Code has been discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>