force-app/main/default/objects/SampleRequestProduct__c/fields/Julian_Date__c.field-meta.xml
<CustomField>
    <fullName>Julian_Date__c</fullName>
    <label>Julian/Production Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>