force-app/main/default/objects/SampleRequestProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sample Products</relationshipLabel>
    <relationshipName>Sample_Products</relationshipName>
    <type>Lookup</type>
</CustomField>