force-app/main/default/objects/SampleRequestProduct__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Cargill Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>