force-app/main/default/objects/SampleRequestProduct__c/fields/Sample_Request_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Request Fulfillment</label>
    <referenceTo>Sample_Request_Fulfillment__c</referenceTo>
    <relationshipLabel>Sample Request Products</relationshipLabel>
    <relationshipName>Sample_Request_Products</relationshipName>
    <type>Lookup</type>
</CustomField>