force-app/main/default/objects/SampleRequestProduct__c/fields/Sample_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Name__c</fullName>
    <formula>SampleRequest__r.Sample_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Request Name</label>
    <type>Text</type>
</CustomField>