force-app/main/default/objects/SampleRequestProduct__c/fields/SampleRequest__c.field-meta.xml
<CustomField>
    <fullName>SampleRequest__c</fullName>
    <label>Sample Request</label>
    <referenceTo>SampleRequest__c</referenceTo>
    <relationshipLabel>Sample Request Products</relationshipLabel>
    <relationshipName>Sample_Request_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>