force-app/main/default/objects/SampleRequestProduct__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>