force-app/main/default/objects/SampleRequestProduct__c/fields/Shipped_Weight__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Weight__c</fullName>
    <label>Shipped Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>