force-app/main/default/objects/SampleRequestProduct__c/validationRules/CFNA_Max_10_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>CFNA_Max_10_Products</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), 
RecordType.Name = &#39;CFNA Sample Request Product&#39;, 
SampleRequest__r.Num_of_Products__c &gt;= 10)</errorConditionFormula>
    <errorMessage>Cannot add more than 10 products to a Sample Request</errorMessage>
</ValidationRule>