force-app/main/default/objects/SampleRequestProduct__c/validationRules/CFNA_Other_Type_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>CFNA_Other_Type_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name == &quot;CFNA Sample Request Product&quot;, 
IsPickVal(CFNA_Type__c, &quot;Other&quot;), 
IsBlank(CFNA_Other_Type__c))</errorConditionFormula>
    <errorDisplayField>CFNA_Other_Type__c</errorDisplayField>
    <errorMessage>Please specify &quot;Other Type&quot;</errorMessage>
</ValidationRule>