force-app/main/default/objects/SampleRequestProduct__c/validationRules/CFNA_SampleRequestProduct_BU.validationRule-meta.xml
<ValidationRule>
    <fullName>CFNA_SampleRequestProduct_BU</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CFNA_Business_Unit__c) != TEXT(SampleRequest__r.CFNA_Business_Unit__c)</errorConditionFormula>
    <errorDisplayField>CFNA_Business_Unit__c</errorDisplayField>
    <errorMessage>Business unit does not match that of the Sample Request</errorMessage>
</ValidationRule>